--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
+    "diff": "^4.0.1",
     "rollup": "^1.32.1",
     "rollup-plugin-terser": "^5.3.0",
     "tap-diff": "^0.1.1",
